# ECS-Arcade-VGP131-Final-Project

./: .gitignore  CMakeLists.txt  README.md
src/: ECS.h  Entity.h  main.cpp
src/Components/: Component.h  PositionComponent.h  SpriteComponent.h
src/Engine/: ECS.h  Entity.h
src/Engine/Components/: AnimationComponent.h  PositionComponent.h  SpriteComponent.h  UIComponent.h
src/Engine/Systems/: CollisionSystem.h  InputSystem.h  MovementSystem.h  RenderSystem.h  System.h  TimeSystem.h  TransformSystem.h
src/Systems/: CollisionSystem.h  MovementSystem.h  RenderSystem.h  TimeSystem.h  TransformSystem.h
